More site and user settings 1 (#206)
* Adding keyword blocks.

* Adding disable email notifications.

* Add listing_mode

--- a/translations/en.json
+++ b/translations/en.json
@@ -96,7 +96,9 @@
   "strikethrough": "strikethrough",
   "quote": "quote",
   "spoiler": "spoiler",
-  "list": "list",
+  "list": "List",
+  "card": "Card",
+  "small_card": "Small card",
   "mod": "mod",
   "mods": "mods",
   "distinguish": "Speak as moderator",
@@ -234,6 +236,7 @@
   "post_sort_type": "Post sort type",
   "comment_sort_type": "Comment sort type",
   "listing_type": "Listing type",
+  "listing_mode": "Listing mode",
   "hot": "Hot",
   "active": "Active",
   "active_users_in_the_last_day": "{{formattedCount}} active user in the last day",
@@ -497,6 +500,9 @@
   "unblock_user": "Unblock user",
   "unblock_community": "Unblock community",
   "blocks": "Blocks",
+  "keyword_blocks": "Keyword blocks",
+  "keyword_blocks_placeholder": "Enter any keywords you'd like to block from your feed, separated by commas.",
+  "block_keyword_too_short": "Keyword block too short.",
   "person_block": "This user has blocked you.",
   "none_found": "None found.",
   "report_reason_required": "Report reason required.",
@@ -539,6 +545,7 @@
   "email_not_verified": "Email not verified.",
   "email_verified": "Your email has been verified.",
   "email_required": "Email required.",
+  "disable_email_notifications": "Disable email notifications",
   "registration_application_answer_required": "Registration application required.",
   "instance_is_private": "This instance is private.",
   "apply_to_join": "Apply to Join",
