Adding allow and disallow

--- a/translations/en.json
+++ b/translations/en.json
@@ -496,6 +496,8 @@
   "blocked_x": "Blocked {{item}}",
   "unblocked": "Unblocked",
   "unblocked_x": "Unblocked {{item}}",
+  "allowed_x": "Allowed {{item}}",
+  "disallowed_x": "Disallowed {{item}}",
   "block_community": "Block community",
   "unblock_user": "Unblock user",
   "unblock_community": "Unblock community",
@@ -655,6 +657,7 @@
   "auto_expand": "Auto expand media",
   "remote_follow_invalid_instance": "{{instance}} is not a vaild domain.",
   "remote_follow_local_instance": "Cannot fetch local instance for remote follow",
+  "domain": "Domain",
   "import_export_section_title": "Import/Export Settings",
   "import_export_section_description": "Import and export your account settings as JSON",
   "export_file_name": "lemmy_user_settings",
