multi_communities should be snake_case.

--- a/translations/en.json
+++ b/translations/en.json
@@ -773,7 +773,7 @@
   "vote_show": "Show",
   "vote_show_for_others": "Show for others",
   "vote_hide": "Hide",
-  "multicommunities": "Multi Communities",
+  "multi_communities": "Multi Communities",
   "liked": "Liked",
   "none": "None",
   "back_to_first_page": "First page",
