Adding post actions bars translations.

--- a/translations/en.json
+++ b/translations/en.json
@@ -15,9 +15,10 @@
   "posts": "Posts",
   "related_posts": "These posts might be related",
   "cross_posts": "This link has also been posted to:",
-  "cross_post": "cross-post",
+  "cross_post": "Cross-post",
   "cross_posted_to": "cross-posted to: ",
   "cross_posted_from_url": "cross-posted from: {{- ap_id}}",
+  "share_post": "Share post",
   "comments": "Comments",
   "number_of_comments": "{{formattedCount}} Comment",
   "number_of_comments_plural": "{{formattedCount}} Comments",
@@ -79,14 +80,14 @@
   "show_context": "Show context",
   "formatting_help": "formatting help",
   "sorting_help": "sorting help",
-  "view_source": "view source",
+  "view_source": "View source",
   "view_all_comments": "View all comments",
   "unlock": "Unlock",
   "lock": "Lock",
   "sticky": "sticky",
   "unsticky": "unsticky",
-  "link": "link",
-  "fedilink": "fedilink",
+  "link": "Link",
+  "fedilink": "Fedilink",
   "archive_link": "archive link",
   "bold": "bold",
   "italic": "italic",
@@ -153,8 +154,8 @@
   "loading": "Loading",
   "stickied": "stickied",
   "reason": "Reason",
-  "mark_as_read": "mark as read",
-  "mark_as_unread": "mark as unread",
+  "mark_as_read": "Mark as read",
+  "mark_as_unread": "Mark as unread",
   "delete": "Delete",
   "deleted_post": "Deleted post",
   "deleted_comment": "Deleted comment",
