Private community strings (#201)
* Private community strings

* more

--- a/translations/en.json
+++ b/translations/en.json
@@ -704,9 +704,16 @@
   "community_locked_message": "<1>Community locked:</1> only moderators can create posts. You can still comment on posts.",
   "community_locked": "Community locked",
   "community_visibility": "Visibility",
-  "local_only": "Local Only",
-  "local_only_blurb": "Only users on this instance can interact with this community.",
-  "public": "Public",
+  "community_visibility_public": "Public",
+  "community_visibility_public_desc": "This community is visible to everyone.",
+  "community_visibility_unlisted": "Unlisted",
+  "community_visibility_unlisted_desc": "This community is visible to everyone, but not shown in global/all feeds.",
+  "community_visibility_local_only_public": "Local Only (Public)",
+  "community_visibility_local_only_public_desc": "This community does not federate and is only available to local users (including those who are not logged in).",
+  "community_visibility_local_only_private": "Local Only (Private)",
+  "community_visibility_local_only_private_desc": "This community does not federate and is only available to local users who are logged in.",
+  "community_visibility_private": "Private",
+  "community_visibility_private_desc": "This community is private and can only by viewed by users who were manually approved by the moderators.",
   "public_blurb": "This community can be federated to other instances and be posted/commented in by their users.",
   "private": "Private",
   "private_blurb": "Only approved users can interact with this community.",
@@ -799,9 +806,13 @@
   "banned_dialog_title_permanent": "You have been permanently banned",
   "banned_dialog_title_temporary": "You have been temporarily banned (expires {{expires}})",
   "banned_dialog_body": "You cannot post, vote or take other actions. However you can continue to browse the site, and on the settings page export your settings to import on another Lemmy instance, create a backup or delete your account.",
+  "cant_view_private_community_message": "You don't have permission to view this community. Click the follow button and wait for manual approval by a moderator to see the content.",
   "expand_all_images": "Expand all images",
   "hide_community_reports": "Hide community reports",
   "show_community_reports": "Show community reports",
+  "community_pending_follows": "Pending Follows",
+  "pending_private_community_follows": "{{formattedCount}} Pending Follow",
+  "pending_private_community_follows_plural": "{{formattedCount}} Pending Follows",
   "block_keyword_too_short": "Block keyword too short",
   "block_keyword_too_long": "Block keyword too long",
   "couldnt_update": "Couldnt update",
