Add animated_images and hide_all_media (#216)

--- a/translations/en.json
+++ b/translations/en.json
@@ -809,6 +809,8 @@
   "banned_dialog_body": "You cannot post, vote or take other actions. However you can continue to browse the site, and on the settings page export your settings to import on another Lemmy instance, create a backup or delete your account.",
   "cant_view_private_community_message": "You don't have permission to view this community. Click the follow button and wait for manual approval by a moderator to see the content.",
   "expand_all_images": "Expand all images",
+  "show_animated_images": "Show animated images",
+  "hide_all_media": "Hide all media",
   "hide_community_reports": "Hide community reports",
   "show_community_reports": "Show community reports",
   "community_pending_follows": "Pending Follows",
