Multi community strings

--- a/translations/en.json
+++ b/translations/en.json
@@ -35,8 +35,9 @@
   "users": "Users",
   "create_a_community": "Create a Community",
   "select_a_community": "Select a Community",
-  "create_community": "Create Community",
-  "remove_community": "Remove Community",
+  "create_community": "Create community",
+  "remove_community": "Remove community",
+  "add_community": "Add a community",
   "explore_communities": "Explore Communities",
   "visit_random_community": "Visit a random community",
   "subscribed_to_communities": "Subscribed to <1>communities</1>",
@@ -651,6 +652,8 @@
   "remote_follow_prompt": "Enter the instance you would like to follow this community from",
   "fetch_community": "Fetch Community",
   "community_federated": "Community Federated!",
+  "community_added": "Community added",
+  "community_removed": "Community removed",
   "fetching_community": "Fetching {{community}}",
   "could_not_fetch_community": "Could not fetch {{community}}",
   "remote_follow": "Remote Follow",
@@ -784,6 +787,7 @@
   "vote_show_for_others": "Show for others",
   "vote_hide": "Hide",
   "multi_communities": "Multi Communities",
+  "create_multi_community": "Create multi-community",
   "liked": "Liked",
   "none": "None",
   "back_to_first_page": "First page",
