--- a/translations/da.json
+++ b/translations/da.json
@@ -493,6 +493,7 @@
     "remove_instance": "Slet instans",
     "add_instance": "Tilføj instans",
     "open_links_in_new_tab": "Åben links i en ny fane",
+    "enable_keyboard_shortcuts": "Aktivér tastaturgenveje",
     "op": "OP",
     "couldnt_create_audio_captcha": "Kunne ikke lave lyd-captcha.",
     "blur_nsfw": "Slør NSFW inhold",
