--- a/translations/de.json
+++ b/translations/de.json
@@ -482,6 +482,7 @@
     "remove_instance": "Instanz entfernen",
     "add_instance": "Instanz hinzufügen",
     "open_links_in_new_tab": "Links in einem neuen Tab öffnen",
+    "enable_keyboard_shortcuts": "Tastaturkürzel aktivieren",
     "op": "OP (Originalposter)",
     "couldnt_create_audio_captcha": "Konnte kein Audio-Captcha erstellen.",
     "hide_password": "Passwort verstecken",
