--- a/translations/el.json
+++ b/translations/el.json
@@ -671,6 +671,7 @@
     "donation_dialog_button_hide": "Απόκρυψη",
     "locked_post_comment_placeholder": "Αυτή η δημοσίευση είναι κλειδωμένη, δεν μπορείτε να σχολιάσετε.",
     "enable_private_messages": "Ενεργοποίηση ιδιωτικών μηνυμάτων",
+    "enable_keyboard_shortcuts": "Ενεργοποίηση συντομεύσεων πληκτρολογίου",
     "upload_and_publish_image_desc": "Η μεταφορτωμένη εικόνα θα διανεμηθεί σε ομόσπονδους διακομιστές χωρίς περαιτέρω ενέργεια του χρήστη.",
     "upvoted": "Ψηφίστηκε θετικά",
     "disallow_nsfw_content": "Απαγόρευση περιεχομένου NSFW",
