--- a/translations/eo.json
+++ b/translations/eo.json
@@ -483,6 +483,7 @@
     "remove_instance": "Forigi nodon",
     "add_instance": "Aldoni nodon",
     "open_links_in_new_tab": "Malfermi ligilojn en nova langeto",
+    "enable_keyboard_shortcuts": "Ebligi klavarŝprucojn",
     "op": "OP",
     "show_password": "Montri pasvorton",
     "hide_password": "Kaŝi pasvorton",
