--- a/translations/es.json
+++ b/translations/es.json
@@ -499,6 +499,7 @@
     "remove_instance": "Borrar nodo",
     "add_instance": "Añadir nodo",
     "open_links_in_new_tab": "Abrir enlaces en una nueva pestaña",
+    "enable_keyboard_shortcuts": "Activar atajos de teclado",
     "featured_in_local": "Destacados en Local",
     "featured_in_community": "Destacados en Comunidad",
     "op": "PO",
