--- a/translations/he.json
+++ b/translations/he.json
@@ -69,6 +69,7 @@
     "remove_instance": "הסר מופע",
     "add_instance": "הוסף מופע",
     "open_links_in_new_tab": "פתח קישורים בטאב חדש",
+    "enable_keyboard_shortcuts": "הפעל קיצורי מקלדת",
     "op": "מפרסם מקורי (OP)",
     "couldnt_create_audio_captcha": "לא ניתן לייצר שמע ל-Captcha.",
     "cross_posted_to": "נושא מועבר ל: ",
