--- a/translations/id.json
+++ b/translations/id.json
@@ -466,6 +466,7 @@
     "remove_instance": "Hapus peladen",
     "add_instance": "Tambah peladen",
     "open_links_in_new_tab": "Buka tautan pada tab baru",
+    "enable_keyboard_shortcuts": "Aktifkan pintasan keyboard",
     "couldnt_create_audio_captcha": "Tidak bisa memuat audio captcha.",
     "incorrect_login": "Kredensial masuk salah",
     "submit": "Kirim",
