--- a/translations/ka.json
+++ b/translations/ka.json
@@ -331,5 +331,6 @@
     "modlog_content_warning": "გაფრთხილება: ეს შინაარსი შესაძლოა შეიცავდეს მგრძნობიარე მასალას.",
     "purge_success": "გასუფთავება წარმატებით დასრულდა.",
     "name_explain": "სახელი - გამოიყენება როგორც საზოგადოების იდენტიფიკატორი, არ შეიძლება შეიცვალოს.",
-    "display_name": "სახელი"
+    "display_name": "სახელი",
+    "enable_keyboard_shortcuts": "ჩართეთ კლავიატურის მალსახმობები"
 }
