--- a/translations/nn.json
+++ b/translations/nn.json
@@ -482,6 +482,7 @@
     "emoji": "Emoji",
     "site": "Nettstad",
     "open_links_in_new_tab": "Opna lenkjer i nye faner",
+    "enable_keyboard_shortcuts": "Aktiver tastatursnarvegar",
     "op": "OP",
     "couldnt_create_audio_captcha": "Klarte ikkje laga lyd-captcha.",
     "incorrect_login": "Ugyldige innloggingsdetaljar",
