--- a/translations/pl.json
+++ b/translations/pl.json
@@ -501,6 +501,7 @@
     "remove_instance": "Usuń instancję",
     "add_instance": "Dodaj instancję",
     "open_links_in_new_tab": "Otwórz linki w nowej karcie",
+    "enable_keyboard_shortcuts": "Włącz skróty klawiszowe",
     "op": "OP",
     "couldnt_create_audio_captcha": "Nie udało się utworzyć dźwiękowego captcha.",
     "controversial": "Kontrowersyjne",
