--- a/translations/ro.json
+++ b/translations/ro.json
@@ -503,6 +503,7 @@
     "remove_instance": "Șterge instanță",
     "add_instance": "Adaugă instanță",
     "open_links_in_new_tab": "Deschide link-urile într-un tab nou",
+    "enable_keyboard_shortcuts": "Activează comenzile rapide de la tastatură",
     "op": "OP",
     "couldnt_create_audio_captcha": "Captcha-ul audio nu a putut fi creat.",
     "incorrect_login": "Credențiale de login incorecte",
