--- a/translations/ru.json
+++ b/translations/ru.json
@@ -494,6 +494,7 @@
     "featured_in_community": "Избранное в сообществе",
     "add_instance": "Добавить экземпляр",
     "open_links_in_new_tab": "Открывать ссылки в новой вкладке",
+    "enable_keyboard_shortcuts": "Включить клавиатурные сочетания",
     "op": "ТС",
     "featured_in_local": "Избранное в местном экземпляре",
     "legal_information": "Права",
