--- a/translations/th.json
+++ b/translations/th.json
@@ -206,5 +206,6 @@
     "modlog": "บันทึกของผู้ควบคุม",
     "filter_by_mod": "กรองจากผู้ควบคุม",
     "only_mods_can_post_in_community": "ผู้ควบคุมเท่านั้นที่สามารถโพสต์ในชุมชนนี้ได้",
-    "removed": "ถูกนำออกโดยผู้ควบคุม"
+    "removed": "ถูกนำออกโดยผู้ควบคุม",
+    "enable_keyboard_shortcuts": "เปิดใช้งานแป้นพิมพ์ลัด"
 }
