--- a/translations/tr.json
+++ b/translations/tr.json
@@ -482,6 +482,7 @@
     "remove_instance": "Oluşumu kaldır",
     "add_instance": "Oluşum ekle",
     "open_links_in_new_tab": "Bağlantıları yeni sekmede aç",
+    "enable_keyboard_shortcuts": "Klavye kısayollarını etkinleştir",
     "op": "Gönderiyi Paylaşan",
     "couldnt_create_audio_captcha": "Sesli captcha oluşturulamadı.",
     "show_password": "Şifreyi Göster",
