--- a/translations/vi.json
+++ b/translations/vi.json
@@ -371,5 +371,6 @@
     "restored_post": "Bài đăng đã được khôi phục",
     "restored_comment": "Bình luận đã khôi phục",
     "restore_comment": "Khôi phục bình luận",
-    "removed_comment": "Bình luận đã xóa"
+    "removed_comment": "Bình luận đã xóa",
+    "enable_keyboard_shortcuts": "Bật phím tắt"
 }
