--- a/translations/cy.json
+++ b/translations/cy.json
@@ -252,5 +252,6 @@
     "next": "Nesaf",
     "sidebar": "Bar Ochr",
     "description": "Disgrifiad",
-    "enable_nsfw": "Galluogi NSFW"
+    "enable_nsfw": "Galluogi NSFW",
+    "enable_keyboard_shortcuts": "Galluogi llwybrau byr bysellfwrdd"
 }
