Add dash for multi-communities

--- a/translations/en.json
+++ b/translations/en.json
@@ -786,7 +786,7 @@
   "vote_show": "Show",
   "vote_show_for_others": "Show for others",
   "vote_hide": "Hide",
-  "multi_communities": "Multi Communities",
+  "multi_communities": "Multi-Communities",
   "create_multi_community": "Create multi-community",
   "liked": "Liked",
   "none": "None",
