Add strings for save/unsave feedback
Includes Romanian and Russian translations.

--- a/translations/ro.json
+++ b/translations/ro.json
@@ -240,6 +240,10 @@
     "purge_success": "Elementul a fost epurat cu succes.",
     "save": "salvează",
     "unsave": "nesalvare",
+    "post_saved": "Postare salvată.",
+    "post_unsaved": "Postare nesalvată.",
+    "comment_saved": "Comentariu salvat.",
+    "comment_unsaved": "Comentariu nesalvat.",
     "create": "creează",
     "creator": "creator",
     "username": "Nume de utilizator",
