--- a/translations/ru.json
+++ b/translations/ru.json
@@ -55,6 +55,10 @@
     "unban_from_site": "Разблокировать на сайте",
     "save": "Сохранить",
     "unsave": "Не сохранять",
+    "post_saved": "Пост сохранён.",
+    "post_unsaved": "Пост удалён из сохранённых.",
+    "comment_saved": "Комментарий сохранён.",
+    "comment_unsaved": "Комментарий удалён из сохранённых.",
     "create": "создать",
     "username": "Имя пользователя",
     "email_or_username": "Электронная почта или имя пользователя",
