--- a/translations/en.json
+++ b/translations/en.json
@@ -17,7 +17,7 @@
   "cross_posts": "This link has also been posted to:",
   "cross_post": "Cross-post",
   "cross_posted_to": "cross-posted to: ",
-  "cross_posted_from_url": "cross-posted from: {{- ap_id}}",
+  "cross_posted_from_url": "cross-posted from: {{ap_id}}",
   "share_post": "Share post",
   "comments": "Comments",
   "number_of_comments": "{{formattedCount}} Comment",
