Adding deleted and restored community.

--- a/translations/en.json
+++ b/translations/en.json
@@ -27,6 +27,7 @@
   "remove_content": "Remove Content",
   "restore_comment": "Restore comment",
   "restored_comment": "Restored comment",
+  "restored_community": "Restored community",
   "lock_comment": "Lock comment",
   "unlock_comment": "Unlock comment",
   "remove_content_more": "Remove Posts, Comments, and Communities",
@@ -160,6 +161,7 @@
   "delete": "Delete",
   "deleted_post": "Deleted post",
   "deleted_comment": "Deleted comment",
+  "deleted_community": "Deleted community",
   "undelete": "Undelete",
   "undeleted_post": "Undeleted post",
   "undeleted_comment": "Undeleted comment",
