A few more strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -38,6 +38,7 @@
   "select_a_community": "Select a Community",
   "create_community": "Create community",
   "remove_community": "Remove community",
+  "restore_community": "Restore community",
   "add_community": "Add a community",
   "explore_communities": "Explore Communities",
   "visit_random_community": "Visit a random community",
@@ -200,6 +201,7 @@
   "purge_post": "Purge post",
   "purge_comment": "Purge comment",
   "purge_community": "Purge community",
+  "purge_community_with_name": "Purge {{community}}",
   "purge_user": "Purge user",
   "purge_user_with_name": "Purge {{user}}",
   "purge_warning": "Warning: Purging will delete this item, and all its children from the database. You will not be able to recover the data. Use with extreme caution.",
