Adding left_mod_team

--- a/translations/en.json
+++ b/translations/en.json
@@ -115,6 +115,7 @@
   "cannot_leave_admin": "You cannot leave the server without an admin",
   "leave_admin_team": "Leave the admin team",
   "left_admin_team": "You have left the admin team",
+  "left_mod_team": "You have left the mod team",
   "profile": "Profile",
   "profile_not_logged_in_alert": "You are not logged in. If you use a Fediverse account that is able to follow users, you can follow this user.",
   "community_not_logged_in_alert": "You are not logged in. However you can subscribe from another Fediverse account, for example Lemmy or Mastodon. To do this, paste the following into the search field of your instance: <1>!{{community}}@{{instance}}</1>",
